# GO_IT_HW_8

./: pyproject.toml
Mongo/: load_json_to_db.py  models.py  read.py
RabbitMQ/: consumer.py  model.py  producer_email.py  producer_sms.py
